# PWAssist

./: .gitignore  README.md  pyproject.toml
examples/data/: README.md
examples/data/bin1/: correlation.csv  covariance.csv
examples/data/bin2/: correlation.csv  fit.csv  norm_int.csv
examples/data/bin3/: correlation.csv  covariance.csv  fit.csv  norm_int.csv
examples/data/mass_1.54-1.56/: data.csv  fit.csv
examples/data/mass_1.54_1.56/: norm_int.csv
examples/data/mass_1.56-1.58/: covariance.csv  data.csv
examples/data/mass_1.58-1.60/: data.csv
examples/notebooks/: walkthrough.ipynb
src/pwassist/core/: result.py
src/pwassist/io/: binning.py  catalog.py  collector.py
src/pwassist/pipeline/: pipeline.py
src/pwassist/plotting/: base.py  bin.py  factory.py  scan.py
src/pwassist/plotting/styles/: publication.mplstyle
src/pwassist/preprocessing/: preprocessor.py  steps.py
tests/: test_catalog.py
